force-app/main/default/objects/Reminder_Event__e/Reminder_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event fired by ReminderQueryBatch for each record matching a reminder offset. Consumed by ReminderEventTrigger to send emails asynchronously.</description>
    <label>Reminder Event</label>
    <pluralLabel>Reminder Events</pluralLabel>
</CustomObject>