force-app/main/default/objects/Reminder_Event__e/fields/Config_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Developer_Name__c</fullName>
    <description>DeveloperName of the Reminder_Configuration__mdt record that triggered this event. Used by the trigger handler to reload config and resolve recipients.</description>
    <label>Config Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>