force-app/main/default/objects/Reminder_Event__e/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>ISO date string (yyyy-MM-dd) of the due date value from the source record. Carried for reference and potential use in email merge fields.</description>
    <label>Due Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>