force-app/main/default/objects/Reminder_Event__e/fields/Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Offset_Days__c</fullName>
    <description>The number of days before (Pre) or after (Post) the due date for this reminder. e.g. 7 means 7 days before or after the due date.</description>
    <label>Offset Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>