force-app/main/default/objects/Reminder_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>18-character Salesforce Id of the source SObject record that matched the reminder query.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>