force-app/main/default/objects/Reminder_Event__e/fields/Reminder_Type__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Type__c</fullName>
    <description>Indicates whether this is a Pre (before due date) or Post (after due date) reminder. Valid values: Pre, Post.</description>
    <label>Reminder Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>